--- a/power/src/app/fragebogen/fragebogen.scss
+++ b/power/src/app/fragebogen/fragebogen.scss
@@ -77,9 +77,11 @@ td {
     margin-right: 10px !important;
 }
 
+/*
 .noUi-connect {
     width: initial !important;
 }
+*/
 
 .smooth-dnd-container {
     height: 100% !important;
