Nipix: Lighthouse-Improvement

--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -194,7 +194,7 @@
 
         </ngb-accordion>
         <div style="text-align: center; margin-top: 1rem;">
-            Es gelten die <a href="{{nipixStatic.agnbUrl}}" target="_blank">Allgemeine Geschäfts- und
+            Es gelten die <a href="{{nipixStatic.agnbUrl}}" target="_blank" rel="noreferrer">Allgemeine Geschäfts- und
             Nutzungsbedingungen (AGNB)</a>
         </div>
     </div>
