--- a/power/src/app/fragebogen/editor/condition-modal/condition-modal.component.html
+++ b/power/src/app/fragebogen/editor/condition-modal/condition-modal.component.html
@@ -20,6 +20,7 @@
 
 <power-modalmini #conditionmodal
                  (closing)="close()">
-    <power-forms-editor-conditions [(data)]="data">
+    <power-forms-editor-conditions [model]="model"
+                                   [(data)]="data">
     </power-forms-editor-conditions>
 </power-modalmini>
