--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -17,8 +17,8 @@
                                i18n>Formular Titel*</label>
                         <input type="text"
                                class="form-control"
-                               [(ngModel)]="storage.model.title.default"
-                               [class.is-invalid]="!storage.model.title.default"
+                               [(ngModel)]="model.title.default"
+                               [class.is-invalid]="!model.title.default"
                                maxlength="200"
                                name="form-title"
                                id="form-title"
@@ -31,7 +31,7 @@
                     <div class="custom-control custom-checkbox mb-3">
                         <input type="checkbox"
                                class="custom-control-input"
-                               [(ngModel)]="storage.model.showTitle"
+                               [(ngModel)]="model.showTitle"
                                name="form-showTitle"
                                id="form-showTitle">
                         <label class="custom-control-label"
@@ -44,7 +44,7 @@
                         <label for="form-description"
                                i18n>Formular Beschreibung</label>
                         <textarea class="form-control"
-                                  [(ngModel)]="storage.model.description.default"
+                                  [(ngModel)]="model.description.default"
                                   id="form-description"
                                   name="form-description"
                                   rows="5"
@@ -62,7 +62,7 @@
                         <label for="form-locale"
                                i18n>Standardsprache</label>
                         <select class="custom-select text-capitalize"
-                                [(ngModel)]="storage.model.locale"
+                                [(ngModel)]="model.locale"
                                 id="form-locale"
                                 name="form-locale"
                                 aria-describedby="form-localeHelp">
@@ -83,7 +83,7 @@
                         <label for="form-showQuestionNumbers"
                                i18n>Fragen Nummerierung</label>
                         <select class="custom-select"
-                                [(ngModel)]="storage.model.showQuestionNumbers"
+                                [(ngModel)]="model.showQuestionNumbers"
                                 id="form-showQuestionNumbers"
                                 name="form-showQuestionNumbers">
                             <option value="on"
@@ -100,7 +100,7 @@
                         <label for="form-questionsOrder"
                                i18n>Fragen Reihenfolge</label>
                         <select class="custom-select"
-                                [(ngModel)]="storage.model.questionsOrder"
+                                [(ngModel)]="model.questionsOrder"
                                 id="form-questionsOrder"
                                 name="form-questionsOrder">
                             <option value="initial"
@@ -115,7 +115,7 @@
                         <label for="form-completedHtml"
                                i18n>Abschlusstext*</label>
                         <textarea class="form-control"
-                                  [(ngModel)]="storage.model.completedHtml.default"
+                                  [(ngModel)]="model.completedHtml.default"
                                   id="form-completedHtml"
                                   name="form-completedHtml"
                                   rows="5"
@@ -129,7 +129,7 @@
                                i18n>Umleitungs URL</label>
                         <input type="text"
                                class="form-control"
-                               [(ngModel)]="storage.model.navigateToUrl"
+                               [(ngModel)]="model.navigateToUrl"
                                name="form-navigateToUrl"
                                id="form-navigateToUrl"
                                placeholder="https://..."
@@ -163,7 +163,7 @@
                                i18n>Formular Logo</label>
                         <input type="text"
                                class="form-control"
-                               [(ngModel)]="storage.model.logo"
+                               [(ngModel)]="model.logo"
                                name="form-logo"
                                id="form-logo"
                                placeholder="https://..."
@@ -179,7 +179,7 @@
                         <label for="form-logoPosition"
                                i18n>Position</label>
                         <select class="custom-select"
-                                [(ngModel)]="storage.model.logoPosition"
+                                [(ngModel)]="model.logoPosition"
                                 id="form-logoPosition"
                                 name="form-logoPosition">
                             <option value="none"
@@ -201,7 +201,7 @@
                                i18n>Breite in Pixel</label>
                         <input type="number"
                                class="form-control"
-                               [(ngModel)]="storage.model.logoWidth"
+                               [(ngModel)]="model.logoWidth"
                                min="0"
                                max="512"
                                name="form-logoWidth"
@@ -214,7 +214,7 @@
                                i18n>Höhe in Pixel</label>
                         <input type="number"
                                class="form-control"
-                               [(ngModel)]="storage.model.logoHeight"
+                               [(ngModel)]="model.logoHeight"
                                min="0"
                                max="512"
                                name="form-logoHeight"
@@ -226,7 +226,7 @@
                         <label for="form-logoFit"
                                i18n>Größenanpassung</label>
                         <select class="custom-select"
-                                [(ngModel)]="storage.model.logoFit"
+                                [(ngModel)]="model.logoFit"
                                 id="form-logoFit"
                                 name="form-logoFit">
                             <option value="none"
@@ -260,7 +260,7 @@
                     <div class="custom-control custom-checkbox mb-3">
                         <input type="checkbox"
                                class="custom-control-input"
-                               [(ngModel)]="storage.model.firstPageIsStarted"
+                               [(ngModel)]="model.firstPageIsStarted"
                                name="form-firstPageIsStarted"
                                id="form-firstPageIsStarted"
                                aria-describedby="form-firstPageIsStartedHelp">
@@ -277,7 +277,7 @@
                     <div class="custom-control custom-checkbox mb-3">
                         <input type="checkbox"
                                class="custom-control-input"
-                               [(ngModel)]="storage.model.showPrevButton"
+                               [(ngModel)]="model.showPrevButton"
                                name="form-showPrevButton"
                                id="form-showPrevButton">
                         <label class="custom-control-label"
@@ -289,7 +289,7 @@
                     <div class="custom-control custom-checkbox mb-3">
                         <input type="checkbox"
                                class="custom-control-input"
-                               [(ngModel)]="storage.model.goNextPageAutomatic"
+                               [(ngModel)]="model.goNextPageAutomatic"
                                name="form-goNextPageAutomatic"
                                id="form-goNextPageAutomatic"
                                aria-describedby="form-goNextPageAutomaticHelp">
@@ -307,7 +307,7 @@
                         <label for="form-showPreviewBeforeComplete"
                                i18n>Vorschau vor dem absenden</label>
                         <select class="custom-select"
-                                [(ngModel)]="storage.model.showPreviewBeforeComplete"
+                                [(ngModel)]="model.showPreviewBeforeComplete"
                                 id="form-showPreviewBeforeComplete"
                                 name="form-showPreviewBeforeComplete"
                                 aria-describedby="form-showPreviewBeforeCompleteHelp">
@@ -330,7 +330,7 @@
                         <label for="form-showProgressBar"
                                i18n>Fortschrittsbalken Anzeigen</label>
                         <select class="custom-select"
-                                [(ngModel)]="storage.model.showProgressBar"
+                                [(ngModel)]="model.showProgressBar"
                                 id="form-showProgressBar"
                                 name="form-showProgressBar">
                             <option value="off"
@@ -349,7 +349,7 @@
                         <label for="form-progressBarType"
                                i18n>Fortschrittsbalken Berechnung</label>
                         <select class="custom-select"
-                                [(ngModel)]="storage.model.progressBarType"
+                                [(ngModel)]="model.progressBarType"
                                 id="form-progressBarType"
                                 name="form-progressBarType">
                             <option value="pages"
@@ -380,7 +380,7 @@
 
                     <!-- render pages -->
                     <accordion [isAnimated]="true">
-                        <accordion-group *ngFor="let page of storage.model.pages; index as i"
+                        <accordion-group *ngFor="let page of model.pages; index as i"
                                          class="mb-1 mb-lg-3">
                             <!-- card head -->
                             <button accordion-heading
@@ -415,7 +415,7 @@
                                             i18n-title
                                             title="Nach unten verschieben"
                                             (click)="moveDown(i)"
-                                            [disabled]="i === storage.model.pages.length - 1">
+                                            [disabled]="i === model.pages.length - 1">
                                         <svg width="1em"
                                              height="1em"
                                              viewBox="0 0 16 16"
@@ -536,13 +536,15 @@
                             <hr>
                             <span i18n>Sichtbarkeitsbedingung</span>
                             <br>
-                            <power-forms-editor-conditions [(data)]="page.visibleIf">
+                            <power-forms-editor-conditions [model]="model"
+                                                           [(data)]="page.visibleIf">
                             </power-forms-editor-conditions>
 
                             <hr>
                             <span i18n>Aktivierungsbedingung</span>
                             <br>
-                            <power-forms-editor-conditions [(data)]="page.enableIf">
+                            <power-forms-editor-conditions [model]="model"
+                                                           [(data)]="page.enableIf">
                             </power-forms-editor-conditions>
                         </accordion-group>
                     </accordion>
@@ -576,7 +578,7 @@
                                i18n>Zeitlimit in Sekunden für das Formular</label>
                         <input type="number"
                                class="form-control"
-                               [(ngModel)]="storage.model.maxTimeToFinish"
+                               [(ngModel)]="model.maxTimeToFinish"
                                min="0"
                                name="form-maxTimeToFinish"
                                id="form-maxTimeToFinish">
@@ -588,7 +590,7 @@
                                i18n>Zeitlimit in Sekunden pro Seite</label>
                         <input type="number"
                                class="form-control"
-                               [(ngModel)]="storage.model.maxTimeToFinishPage"
+                               [(ngModel)]="model.maxTimeToFinishPage"
                                min="0"
                                name="form-maxTimeToFinishPage"
                                id="form-maxTimeToFinishPage">
@@ -599,7 +601,7 @@
                         <label for="form-showTimerPanel"
                                i18n>Zeitlimit anzeigen</label>
                         <select class="custom-select"
-                                [(ngModel)]="storage.model.showTimerPanel"
+                                [(ngModel)]="model.showTimerPanel"
                                 id="form-showTimerPanel"
                                 name="form-showTimerPanel">
                             <option value="none"
@@ -616,7 +618,7 @@
                         <label for="form-showTimerPanelMode"
                                i18n>Timer anzeigen</label>
                         <select class="custom-select"
-                                [(ngModel)]="storage.model.showTimerPanelMode"
+                                [(ngModel)]="model.showTimerPanelMode"
                                 id="form-showTimerPanelMode"
                                 name="form-showTimerPanelMode">
                             <option value="all"
