--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -1,6 +1,7 @@
 <power-modal #formsettingsmodal
              (closing)="close()">
-    <div class="container px-1 px-lg-3">
+    <div class="container px-1 px-lg-3"
+         *ngIf="model">
         <accordion [isAnimated]="true"
                    [closeOthers]="true">
             <!-- common -->
