--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -1,8 +1,6 @@
 <!-- dashboard page -->
-<main class="mainpage p-1 p-lg-3"
-      id="content"
-      tabindex="-1">
-   <div class="card bg-light">
+<main class="mainpage p-1 p-lg-3" id="content" tabindex="-1">
+    <div class="card bg-light" *ngIf="data">
         <div class="card-header h5">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-medical align-baseline"
                 fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
@@ -13,17 +11,41 @@
                     d="M7 4a.5.5 0 0 1 .5.5v.634l.549-.317a.5.5 0 1 1 .5.866L8 6l.549.317a.5.5 0 1 1-.5.866L7.5 6.866V7.5a.5.5 0 0 1-1 0v-.634l-.549.317a.5.5 0 1 1-.5-.866L6 6l-.549-.317a.5.5 0 0 1 .5-.866l.549.317V4.5A.5.5 0 0 1 7 4zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
             </svg>
             <span i18n>&nbsp;Formulare</span>
+            <div class="float-right">
+                <input class="form-control" id="form-title-search" type="text" placeholder="Titel" aria-label="Titel"
+                    (blur)="filterByTitle($event.target.value)" (keydown.enter)="filterByTitle($event.target.value)">
+            </div>
         </div>
         <div class="card-body table-responsive p-0">
             <table class="table table-hover m-0">
                 <thead>
                     <tr>
-                        <th scope="col" class="border-top-0 w-50" i18n>Titel</th>
-                        <th scope="col" class="border-top-0" i18n>Veröffentlicht</th>
+                        <th scope="col" (click)="changeSort('title')" class="border-top-0 w-50" i18n>
+                            Titel
+                            <span *ngIf="sort && sort == 'title'">
+                                <span *ngIf="order == 'asc'">
+                                    (aufsteigend)
+                                </span>
+                                <span *ngIf="order == 'desc'">
+                                    (absteigend)
+                                </span>
+                            </span>
+                        </th>
+                        <th scope="col" (click)="changeSort('published')" class="border-top-0" i18n>
+                            Veröffentlicht
+                            <span *ngIf="sort && sort == 'published'">
+                                <span *ngIf="order == 'asc'">
+                                    (aufsteigend)
+                                </span>
+                                <span *ngIf="order == 'desc'">
+                                    (absteigend)
+                                </span>
+                            </span>
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let form of storage.formsList; index as i">
+                    <tr *ngFor="let form of data; index as i">
                         <td>
                             <a [routerLink]="['/forms/fillout/form', form.id]">{{ form.title }}</a>
                         </td>
@@ -31,8 +53,24 @@
                     </tr>
                 </tbody>
             </table>
-            <span class="m-3" *ngIf="!storage.formsList.length" i18n>Keine Formulare gefunden</span>
+            <span class="m-3" *ngIf="!data.length" i18n>Keine Formulare gefunden</span>
         </div>
-
+        <div class="card-footer">
+            <div class="float-right">
+                <div class="form-inline well">
+                    <div class="form-group mx-2">
+                        <select class="custom-select" (change)="changePerPage($event.target.value)">
+                            <option *ngFor=" let size of pageSizes">
+                                {{ size }}
+                            </option>
+                        </select>
+                    </div>
+                    <pagination [boundaryLinks]="true" [itemsPerPage]="perPage" [maxSize]="10" [totalItems]="total"
+                        (pageChanged)="changePage($event.page)" previousText="&lsaquo;" nextText="&rsaquo;"
+                        firstText="&laquo;" lastText="&raquo;">
+                    </pagination>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
