Added surveyjs style

--- a/power/src/styles.scss
+++ b/power/src/styles.scss
@@ -3,6 +3,7 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~nouislider/distribute/nouislider.css';
 @import '~mapbox-gl/dist/mapbox-gl.css';
+@import '~survey-angular/survey.css';
 @import 'app/fragebogen/fragebogen.scss';
 
 @mixin font($font-family, $font-file) {
