--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -358,7 +358,7 @@
                             <option value="requiredQuestions"
                                     i18n>Sichtbare Pflichtfragen</option>
                             <option value="questions"
-                                    i18n>Alle Fragen</option>
+                                    i18n>Alle sichtbaren Fragen</option>
                             <option value="correctQuestions"
                                     i18n>Korrekt beantwortete Fragen (Quiz)</option>
                         </select>
