--- a/power/src/app/fragebogen/fragebogen.scss
+++ b/power/src/app/fragebogen/fragebogen.scss
@@ -54,7 +54,7 @@ td {
 
 /* imagepicker: checked color */
 .imagepicker-checked div {
-    background-color: #ccc;
+    background-color: #ccc !important;
 }
 
 @media (max-width: 576px) {
@@ -69,6 +69,10 @@ td {
     .sv_q_rating_min_text {
         display: none !important;
     }
+}
+
+.sv_custom_header {
+    display: none !important;
 }
 
 .smooth-dnd-container {
