refactor + pagination + filter + sort

--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -98,7 +98,7 @@
 
                     <!-- tags -->
                     <power-tagbox [(tagList)]="tagList"
-                                  [dataList]="storage.tagList"
+                                  [dataList]="data.tags"
                                   tagboxLabel="Tags"></power-tagbox>
 
                     <button type="submit"
